マーカー変換高速化

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -60,6 +60,26 @@ ament_target_dependencies(test_global_field_generator
     Eigen3
 )
 
+# Repulsive Forceテスト
+ament_add_gtest(test_repulsive_force
+    test_repulsive_force.cpp
+)
+
+target_include_directories(test_repulsive_force PUBLIC
+    ${CMAKE_SOURCE_DIR}/include
+)
+
+target_link_libraries(test_repulsive_force
+    ${PROJECT_NAME}_core
+)
+
+ament_target_dependencies(test_repulsive_force
+    rclcpp
+    nav_msgs
+    geometry_msgs
+    Eigen3
+)
+
 # カバレッジ計測の設定
 if(CMAKE_BUILD_TYPE STREQUAL "Debug")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --coverage")
