地図の占有情報を障害物としてマスク

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,7 @@ add_library(${PROJECT_NAME}_core
   src/core/fast_marching.cpp
   src/core/global_field_generator.cpp
   src/core/repulsive_force.cpp
+  src/core/map_repulsion.cpp
   src/ros/tvvf_vo_node.cpp
   src/ros/tvvf_vo_callbacks.cpp
   src/ros/tvvf_vo_control.cpp
