--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -120,6 +120,28 @@ ament_target_dependencies(test_obstacles_unified
     Eigen3
 )
 
+# Control loop safety (stop on missing TF/goal)
+ament_add_gtest(test_control_loop_safety
+    test_control_loop_safety.cpp
+)
+
+target_include_directories(test_control_loop_safety PUBLIC
+    ${CMAKE_SOURCE_DIR}/include
+)
+
+target_link_libraries(test_control_loop_safety
+    ${PROJECT_NAME}_core
+)
+
+ament_target_dependencies(test_control_loop_safety
+    rclcpp
+    nav_msgs
+    geometry_msgs
+    tf2_ros
+    tf2_geometry_msgs
+    Eigen3
+)
+
 # カバレッジ計測の設定
 if(CMAKE_BUILD_TYPE STREQUAL "Debug")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --coverage")
