--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -120,6 +120,46 @@ ament_target_dependencies(test_obstacles_unified
     Eigen3
 )
 
+# Vector field visualization rate test
+ament_add_gtest(test_vector_field_visualization_rate
+    test_vector_field_visualization_rate.cpp
+)
+
+target_include_directories(test_vector_field_visualization_rate PUBLIC
+    ${CMAKE_SOURCE_DIR}/include
+)
+
+target_link_libraries(test_vector_field_visualization_rate
+    ${PROJECT_NAME}_core
+)
+
+ament_target_dependencies(test_vector_field_visualization_rate
+    rclcpp
+    nav_msgs
+    geometry_msgs
+    Eigen3
+)
+
+# use_rviz flag behavior test
+ament_add_gtest(test_use_rviz_flag
+    test_use_rviz_flag.cpp
+)
+
+target_include_directories(test_use_rviz_flag PUBLIC
+    ${CMAKE_SOURCE_DIR}/include
+)
+
+target_link_libraries(test_use_rviz_flag
+    ${PROJECT_NAME}_core
+)
+
+ament_target_dependencies(test_use_rviz_flag
+    rclcpp
+    nav_msgs
+    geometry_msgs
+    Eigen3
+)
+
 # カバレッジ計測の設定
 if(CMAKE_BUILD_TYPE STREQUAL "Debug")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --coverage")
