--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -160,6 +160,26 @@ ament_target_dependencies(test_use_rviz_flag
     Eigen3
 )
 
+# Speed floor mapping test
+ament_add_gtest(test_speed_floor
+    test_speed_floor.cpp
+)
+
+target_include_directories(test_speed_floor PUBLIC
+    ${CMAKE_SOURCE_DIR}/include
+)
+
+target_link_libraries(test_speed_floor
+    ${PROJECT_NAME}_core
+)
+
+ament_target_dependencies(test_speed_floor
+    rclcpp
+    nav_msgs
+    geometry_msgs
+    Eigen3
+)
+
 # カバレッジ計測の設定
 if(CMAKE_BUILD_TYPE STREQUAL "Debug")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --coverage")
