--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,7 @@ find_package(geometry_msgs REQUIRED)
 find_package(nav_msgs REQUIRED)
 find_package(sensor_msgs REQUIRED)
 find_package(visualization_msgs REQUIRED)
+find_package(rcl_interfaces REQUIRED)
 find_package(tf2_ros REQUIRED)
 find_package(tf2_geometry_msgs REQUIRED)
 find_package(eigen3_cmake_module REQUIRED)
@@ -61,6 +62,7 @@ ament_target_dependencies(${PROJECT_NAME}_core
   nav_msgs
   sensor_msgs
   visualization_msgs
+  rcl_interfaces
   tf2_ros
   tf2_geometry_msgs
   Eigen3
@@ -90,6 +92,7 @@ ament_target_dependencies(${PROJECT_NAME}_node
   nav_msgs
   sensor_msgs
   visualization_msgs
+  rcl_interfaces
   tf2_ros
   tf2_geometry_msgs
   Eigen3
@@ -127,6 +130,7 @@ ament_export_dependencies(
   nav_msgs
   sensor_msgs
   visualization_msgs
+  rcl_interfaces
   tf2_ros
   tf2_geometry_msgs
   Eigen3
