--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -180,6 +180,26 @@ ament_target_dependencies(test_speed_floor
     Eigen3
 )
 
+# Dynamic parameter update test
+ament_add_gtest(test_dynamic_parameters
+    test_dynamic_parameters.cpp
+)
+
+target_include_directories(test_dynamic_parameters PUBLIC
+    ${CMAKE_SOURCE_DIR}/include
+)
+
+target_link_libraries(test_dynamic_parameters
+    ${PROJECT_NAME}_core
+)
+
+ament_target_dependencies(test_dynamic_parameters
+    rclcpp
+    nav_msgs
+    geometry_msgs
+    Eigen3
+)
+
 # カバレッジ計測の設定
 if(CMAKE_BUILD_TYPE STREQUAL "Debug")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --coverage")
